--- a/data.ipynb
+++ b/data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6331,7 +6331,7 @@
     }
    ],
    "source": [
-    "RationalQuadraticdfMUNW.loc[dfMUNW['Country'] == \"Spain\"]"
+    "dfMUNW.loc[dfMUNW['Country'] == \"Spain\"]"
    ]
   },
   {
@@ -7019,7 +7019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7030,6 +7030,342 @@
     "renta = pd.read_parquet(\"renta.parquet\")\n",
     "turismo = pd.read_parquet(\"tourism.parquet\")\n",
     "waste = pd.read_parquet(\"waste.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LOCATION</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>SUBJECT</th>\n",
+       "      <th>Subject</th>\n",
+       "      <th>MEASURE</th>\n",
+       "      <th>Measure</th>\n",
+       "      <th>TIME</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Unit Code</th>\n",
+       "      <th>Unit</th>\n",
+       "      <th>PowerCode Code</th>\n",
+       "      <th>PowerCode</th>\n",
+       "      <th>Reference Period Code</th>\n",
+       "      <th>Reference Period</th>\n",
+       "      <th>Value</th>\n",
+       "      <th>Flag Codes</th>\n",
+       "      <th>Flags</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>245</th>\n",
+       "      <td>AUS</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>T_GDPPOP</td>\n",
+       "      <td>GDP per head of population</td>\n",
+       "      <td>CPC</td>\n",
+       "      <td>USD, current prices, current PPPs</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>US Dollar</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Units</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4638.882126</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>246</th>\n",
+       "      <td>AUS</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>T_GDPPOP</td>\n",
+       "      <td>GDP per head of population</td>\n",
+       "      <td>CPC</td>\n",
+       "      <td>USD, current prices, current PPPs</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>US Dollar</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Units</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>4849.898730</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>247</th>\n",
+       "      <td>AUS</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>T_GDPPOP</td>\n",
+       "      <td>GDP per head of population</td>\n",
+       "      <td>CPC</td>\n",
+       "      <td>USD, current prices, current PPPs</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>US Dollar</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Units</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>5195.652044</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>248</th>\n",
+       "      <td>AUS</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>T_GDPPOP</td>\n",
+       "      <td>GDP per head of population</td>\n",
+       "      <td>CPC</td>\n",
+       "      <td>USD, current prices, current PPPs</td>\n",
+       "      <td>1973</td>\n",
+       "      <td>1973</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>US Dollar</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Units</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>5779.645079</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>249</th>\n",
+       "      <td>AUS</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>T_GDPPOP</td>\n",
+       "      <td>GDP per head of population</td>\n",
+       "      <td>CPC</td>\n",
+       "      <td>USD, current prices, current PPPs</td>\n",
+       "      <td>1974</td>\n",
+       "      <td>1974</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>US Dollar</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Units</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>6228.527489</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44020</th>\n",
+       "      <td>LTU</td>\n",
+       "      <td>Lithuania</td>\n",
+       "      <td>T_GDPPOP</td>\n",
+       "      <td>GDP per head of population</td>\n",
+       "      <td>CPC</td>\n",
+       "      <td>USD, current prices, current PPPs</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>US Dollar</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Units</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>28156.190136</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44021</th>\n",
+       "      <td>LTU</td>\n",
+       "      <td>Lithuania</td>\n",
+       "      <td>T_GDPPOP</td>\n",
+       "      <td>GDP per head of population</td>\n",
+       "      <td>CPC</td>\n",
+       "      <td>USD, current prices, current PPPs</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>US Dollar</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Units</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>28823.805591</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44022</th>\n",
+       "      <td>LTU</td>\n",
+       "      <td>Lithuania</td>\n",
+       "      <td>T_GDPPOP</td>\n",
+       "      <td>GDP per head of population</td>\n",
+       "      <td>CPC</td>\n",
+       "      <td>USD, current prices, current PPPs</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>US Dollar</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Units</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>30924.899738</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44023</th>\n",
+       "      <td>LTU</td>\n",
+       "      <td>Lithuania</td>\n",
+       "      <td>T_GDPPOP</td>\n",
+       "      <td>GDP per head of population</td>\n",
+       "      <td>CPC</td>\n",
+       "      <td>USD, current prices, current PPPs</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>US Dollar</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Units</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>33821.206278</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44024</th>\n",
+       "      <td>LTU</td>\n",
+       "      <td>Lithuania</td>\n",
+       "      <td>T_GDPPOP</td>\n",
+       "      <td>GDP per head of population</td>\n",
+       "      <td>CPC</td>\n",
+       "      <td>USD, current prices, current PPPs</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>US Dollar</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Units</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>35831.865190</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1760 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      LOCATION    Country   SUBJECT                     Subject MEASURE  \\\n",
+       "245        AUS  Australia  T_GDPPOP  GDP per head of population     CPC   \n",
+       "246        AUS  Australia  T_GDPPOP  GDP per head of population     CPC   \n",
+       "247        AUS  Australia  T_GDPPOP  GDP per head of population     CPC   \n",
+       "248        AUS  Australia  T_GDPPOP  GDP per head of population     CPC   \n",
+       "249        AUS  Australia  T_GDPPOP  GDP per head of population     CPC   \n",
+       "...        ...        ...       ...                         ...     ...   \n",
+       "44020      LTU  Lithuania  T_GDPPOP  GDP per head of population     CPC   \n",
+       "44021      LTU  Lithuania  T_GDPPOP  GDP per head of population     CPC   \n",
+       "44022      LTU  Lithuania  T_GDPPOP  GDP per head of population     CPC   \n",
+       "44023      LTU  Lithuania  T_GDPPOP  GDP per head of population     CPC   \n",
+       "44024      LTU  Lithuania  T_GDPPOP  GDP per head of population     CPC   \n",
+       "\n",
+       "                                 Measure  TIME  Time Unit Code       Unit  \\\n",
+       "245    USD, current prices, current PPPs  1970  1970       USD  US Dollar   \n",
+       "246    USD, current prices, current PPPs  1971  1971       USD  US Dollar   \n",
+       "247    USD, current prices, current PPPs  1972  1972       USD  US Dollar   \n",
+       "248    USD, current prices, current PPPs  1973  1973       USD  US Dollar   \n",
+       "249    USD, current prices, current PPPs  1974  1974       USD  US Dollar   \n",
+       "...                                  ...   ...   ...       ...        ...   \n",
+       "44020  USD, current prices, current PPPs  2014  2014       USD  US Dollar   \n",
+       "44021  USD, current prices, current PPPs  2015  2015       USD  US Dollar   \n",
+       "44022  USD, current prices, current PPPs  2016  2016       USD  US Dollar   \n",
+       "44023  USD, current prices, current PPPs  2017  2017       USD  US Dollar   \n",
+       "44024  USD, current prices, current PPPs  2018  2018       USD  US Dollar   \n",
+       "\n",
+       "       PowerCode Code PowerCode Reference Period Code Reference Period  \\\n",
+       "245                 0     Units                  None             None   \n",
+       "246                 0     Units                  None             None   \n",
+       "247                 0     Units                  None             None   \n",
+       "248                 0     Units                  None             None   \n",
+       "249                 0     Units                  None             None   \n",
+       "...               ...       ...                   ...              ...   \n",
+       "44020               0     Units                  None             None   \n",
+       "44021               0     Units                  None             None   \n",
+       "44022               0     Units                  None             None   \n",
+       "44023               0     Units                  None             None   \n",
+       "44024               0     Units                  None             None   \n",
+       "\n",
+       "              Value Flag Codes Flags  \n",
+       "245     4638.882126       None  None  \n",
+       "246     4849.898730       None  None  \n",
+       "247     5195.652044       None  None  \n",
+       "248     5779.645079       None  None  \n",
+       "249     6228.527489       None  None  \n",
+       "...             ...        ...   ...  \n",
+       "44020  28156.190136       None  None  \n",
+       "44021  28823.805591       None  None  \n",
+       "44022  30924.899738       None  None  \n",
+       "44023  33821.206278       None  None  \n",
+       "44024  35831.865190       None  None  \n",
+       "\n",
+       "[1760 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "renta[(renta.SUBJECT == 'T_GDPPOP') & (renta.MEASURE == 'CPC')]"
    ]
   },
   {
@@ -11839,7 +12175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12056,6 +12392,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "923    1.409517e+09\n",
+      "Name: Population, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.nlargest(1, 'Population').Population)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -12078,7 +12432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
